--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 </div>
                 <div class="carousel-inner">
                 <div class="carousel-item active p-2 text-center">
-                    <img src="c-1.jpg" class="d-block w-100" alt="image">
+                    <img src="dist/c-1.jpg" class="d-block w-100" alt="image">
                 </div>
                 <div class="animate-bounce w-6 h-6 place-content-center">
                     <ion-icon class="items-center " name="chevron-down-sharp"></ion-icon>
