--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <button class="btn   my-4 items-center place-content-center justify-center bg-slate-400 rounded p-2 text-white font-serif hover:text-cyan-300 duration-500">EXISTING INVENTORY</button>
                 </div>
                 <div class="carousel-item p-2">
-                    <img src="c-2.jpg" class="d-block w-100" alt="image">
+                    <img src="dist/c-2.jpg" class="d-block w-100" alt="image">
                 </div>
                 <div class="animate-bounce w-6 h-6 " >
                     <ion-icon name="chevron-down-sharp"></ion-icon>
