--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hyundai-Motors</title>
-    <link rel="icon" type="image" href="logo.png">
+    <link rel="icon" type="image" href="dist/logo.png">
     <link rel="stylesheet" href="dist/output.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
@@ -87,7 +87,7 @@
                 <button class="btn items-center place-content-center justify-center hover:text-cyan-300 duration-500 bg-gray-500 rounded p-2 text-white font-serif">CUSTOM ORDER</button>
                 <button class="btn  items-center place-content-center justify-center bg-slate-400 rounded p-2 text-white font-serif hover:text-cyan-300 duration-500">EXISTING INVENTORY</button>
                 <div class="carousel-item p-2">
-                    <img src="c-3.jpg" class="d-block w-100" alt="image">
+                    <img src="dist/c-3.jpg" class="d-block w-100" alt="image">
                 </div>
                 <div class="animate-bounce w-6 h-6 ">
                     <ion-icon name="chevron-down-sharp"></ion-icon>
@@ -95,7 +95,7 @@
                 <button class="btn items-center place-content-center justify-center hover:text-cyan-300 duration-500 bg-gray-500 rounded p-2 text-white font-serif">CUSTOM ORDER</button>
                 <button class="btn  items-center place-content-center justify-center bg-slate-400 rounded p-2 text-white font-serif hover:text-cyan-300 duration-500">EXISTING INVENTORY</button>
                 <div class="carousel-item p-2">
-                    <img src="c-4.jpg" class="d-block w-100" alt="image">
+                    <img src="dist/c-4.jpg" class="d-block w-100" alt="image">
                 </div>
                 <div class="animate-bounce w-6 h-6 md:items-center"> 
                     <ion-icon name="chevron-down-sharp"></ion-icon>
@@ -103,7 +103,7 @@
                 <button class="btn items-center place-content-center justify-center hover:text-cyan-300 duration-500 bg-gray-500 rounded p-2 text-white font-serif">CUSTOM ORDER</button>
                 <button class="btn  items-center place-content-center justify-center bg-slate-400 rounded p-2 text-white font-serif hover:text-cyan-300 duration-500">EXISTING INVENTORY</button>
                 <div class="carousel-item p-2">
-                    <img src="c-5.jpg" class="d-block w-100" alt="image">
+                    <img src="dist/c-5.jpg" class="d-block w-100" alt="image">
                 </div>
                 <div class="animate-bounce w-6 h-6 md:items-center ">
                     <ion-icon name="chevron-down-sharp"></ion-icon>
