--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 <button class="btn items-center place-content-center justify-center hover:text-cyan-300 duration-500 bg-gray-500 rounded p-2 text-white font-serif">CUSTOM ORDER</button>
                 <button class="btn  items-center place-content-center justify-center bg-slate-400 rounded p-2 text-white font-serif hover:text-cyan-300 duration-500">EXISTING INVENTORY</button>
                 <div class="carousel-item p-2">
-                    <img src="c-6.jpg" class="d-block w-100" alt="image">
+                    <img src="dist/c-6.jpg" class="d-block w-100" alt="image">
                 </div>
                 </div>
     </div>
